# lunaQt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  demo.pro.qtds  docker-compose.yml  main.cpp  model.glb  torizonPackages.json
.conf/: apply-ci-settings-file.xsh  check-ci-env.xsh  check-deps.xsh  create-docker-compose-production.xsh  docker-login.xsh  metadata.json  project-updater.xsh  qt-enterprise-generate-auth-conf.xsh  remove-dangling-images.xsh  run-container-if-not-exists.xsh  service-check.xsh  share-wsl-ports.xsh  spin-up-down-registry.xsh  tcb-env-setup.sh  torizon-io.xsh  torizon-packages.xsh  update.json  validate-deps-running.xsh  validate-json.xsh
.conf/qt6-enterprise/: qt-feed-auth.hash
.doc/: README.md
.github/workflows/: build-application.yaml
.qt/QtProject/: QtCreator.ini
.qt/QtProject/qtcreator/: cmaketools.xml  default.qws
.qt/QtProject/qtcreator/qbs/1.23.0/: qbs.conf
QML/: Scene.ui.qml  main.qml
